# mullama

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  wrapper.h
.github/workflows/: bindings.yml  ci.yml  publish.yml  release-bindings.yml  release-mullama.yml
bindings/: README.md
bindings/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/ffi/include/: mullama.h
bindings/ffi/src/: context.rs  embedding.rs  error.rs  handle.rs  lib.rs  model.rs  sampler.rs  streaming.rs
bindings/go/: README.md  go.mod  mullama.go  mullama_test.go
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/node/tests/: mullama.test.js
bindings/php/: README.md  composer.json  phpunit.xml
bindings/php/src/: Context.php  EmbeddingGenerator.php  Model.php  Mullama.php  SamplerParams.php
bindings/php/tests/: MullamaTest.php
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/mullama/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: __init__.py  conftest.py  test_mullama.py
configs/: models.toml
docs/: API_REFERENCE.md  DAEMON.md  FEATURES.md  FEATURE_STATUS.md  GETTING_STARTED.md  MIGRATION.md  MIGRATION_FROM_OLLAMA.md  PLATFORM_SETUP.md  README.md  USE_CASES.md  getting-started.md  gpu.md  sampling.md
docs/api/: model.md
documentation/: mkdocs.yml  requirements.txt
documentation/docs/: contributing.md  getting-started.md  index.md  use-cases.md
documentation/docs/advanced/: control-vectors.md  format-conversion.md  index.md  late-interaction.md  parallel.md  simd.md  streaming-audio.md  web-framework.md  websockets.md
documentation/docs/api/: async.md  batch.md  configuration.md  context.md  embeddings.md  errors.md  index.md  model.md  multimodal.md  sampling.md  streaming.md
documentation/docs/bindings/: c-cpp.md  go.md  index.md  nodejs.md  php.md  python.md
documentation/docs/comparison/: benchmarks.md  feature-matrix.md  index.md  migration-from-ollama.md  vs-ollama.md
documentation/docs/daemon/: anthropic-api.md  cli.md  configuration.md  deployment.md  index.md  model-aliases.md  model-management.md  modelfile.md  openai-api.md  rest-api.md  tui.md  web-ui.md
documentation/docs/examples/: api-server.md  basic.md  batch.md  chatbot.md  (+8 more)
examples/: advanced_generation.rs  async_generation.rs  batch.rs  benchmarks.rs  builder_patterns.rs  chat.rs  complete_integration_demo.rs  comprehensive_test.rs  configuration_management.rs  embedding.rs  functionality_test.rs  integration_showcase.rs  multimodal.rs  real_model_test.rs  session.rs  simple.rs  simple_generation.rs  streaming_audio_demo.rs  streaming_generation.rs  web_service.rs
scripts/: com.neul.mullamad.plist  install.ps1  install.sh  mullamad.service
src/: arena.rs  async_support.rs  batch.rs  builder.rs  capabilities.rs  config.rs  context.rs  control_vector.rs  embedding.rs  error.rs  format_conversion.rs  gpu_advanced.rs  grammar.rs  huggingface.rs  lib.rs  lora.rs  memory.rs  memory_monitor.rs  model.rs  modelfile.rs  multimodal.rs  parallel.rs  quantization.rs  sampling.rs  sampling_simd.rs  session.rs  speculative.rs  streaming.rs  streaming_audio.rs  structured_output.rs  sys.rs  tokio_integration.rs  vocab.rs  web.rs  websockets.rs
src/daemon/: anthropic.rs  client.rs  defaults.rs  hf.rs  mod.rs  models.rs  ollama.rs  ollama_template.rs  openai.rs  protocol.rs  registry.rs  server.rs  spawn.rs  tui.rs  ui.rs
tests/: benchmark_tests.rs  doc_tests.rs  error_tests.rs  integration_tests.rs  model_integration_tests.rs  sampling_tests.rs  simple_test.rs  unit_tests.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.vue  style.css
(+32 files in other folders)
