[package]
name = "mullama-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for Mullama LLM library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neul-labs/mullama"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
mullama = { path = "../.." }
napi = { version = "2", features = ["async", "napi8", "serde-json"] }
napi-derive = "2"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
