[package]
name = "mullama-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Mullama LLM library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neul-labs/mullama"
readme = "README.md"

[lib]
name = "mullama"
crate-type = ["cdylib"]

[dependencies]
mullama = { path = "../.." }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
num_cpus = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"

[features]
default = []
